Add image tag for training resources
Added an image tag to the HTML file.

--- a/AmericanChurchPlanting.html
+++ b/AmericanChurchPlanting.html
@@ -6,6 +6,7 @@
     <meta name="description" content="American Church Planting Training offers 5 trainings in 12 months. Explore our calendar, access resources, and contact us.">
     <meta name="keywords" content="church planting, training, Christian education, ministry resources">
     <meta name="author" content="American Church Planting Training">
+    <img src=url(https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png)alt="<alt text>">
     <title>American Church Planting Training</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
