--- a/AmericanChurchPlanting.html
+++ b/AmericanChurchPlanting.html
@@ -6,7 +6,6 @@
     <meta name="description" content="American Church Planting Training offers 5 trainings in 12 months. Explore our calendar, access resources, and contact us.">
     <meta name="keywords" content="church planting, training, Christian education, ministry resources">
     <meta name="author" content="American Church Planting Training">
-    <img src=url(https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png)alt="<alt text>">
     <title>American Church Planting Training</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -67,7 +66,7 @@
             text-decoration: underline;
         }
         .hero {
-            background-image: url('https://github.com/counciloftroas/5-in-12/blob/main/roger-starnes-sr-3qffsgDHFIw-unsplash.jpg?raw=true');
+            background-image: url('https://github.com/counciloftroas/counciloftroas.github.io/blob/main/roger-starnes-sr-3qffsgDHFIw-unsplash.jpg?raw=true');
             background-size: cover;
             background-position: center;
             color: #ffffff;
@@ -199,7 +198,7 @@
             border: none;
             cursor: pointer;
             font-weight: 600;
-            border-radius: 5px;
+            border-radius:5px;
         }
         button:hover {
             background-color: #9b8b5e;
@@ -233,7 +232,7 @@
 </head>
 <body>
     <header>
-        <img src="https://github.com/counciloftroas/5-in-12/blob/main/Asset%201.png?raw=true" alt="American Church Planting Training Logo">
+        <img src="https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png" alt="American Church Planting Training Logo">
         <h1>American Church Planting Training</h1>
         <p>5 Trainings in 12 Months</p>
     </header>
@@ -330,397 +329,4 @@
                         <td>GCT 1</td>
                         <td>Battle Creek MI</td>
                         <td>TBD</td>
-                        <td>Melanie Farkas</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Olney IL</td>
-                        <td>TBD</td>
-                        <td>Melanie Farkas</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Cincinnati OH</td>
-                        <td>TBD</td>
-                        <td>Jason McKinney</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Albuquerque NM</td>
-                        <td>1/10/25</td>
-                        <td>Everett Altman & Rich Lowery</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>Florence SC</td>
-                        <td>1/10/26 - 1/11/26</td>
-                        <td>David Lewis</td>
-                        <td>Regional Mid-Level</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Baton Rouge LA</td>
-                        <td>1/17/26</td>
-                        <td>Ryan Spinks</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>TBD MA</td>
-                        <td>1/25/26</td>
-                        <td>Rich Lowery</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Newark NJ</td>
-                        <td>TBD</td>
-                        <td>Rich Lowery</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Nashville TN</td>
-                        <td>2/7/26</td>
-                        <td>David Kaufmann</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Pittsburgh PA</td>
-                        <td>2/21/26</td>
-                        <td>Rich Lowery</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Battle Creek MI</td>
-                        <td>3/14/26</td>
-                        <td>Melanie Farkas</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Baton Rouge LA</td>
-                        <td>3/14/26</td>
-                        <td>Ryan Spinks</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Stephenville TX</td>
-                        <td>3/21/26</td>
-                        <td>Joseph Hansen</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>TBD MA</td>
-                        <td>3/21/26</td>
-                        <td>Rich Lowery</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Hanahan SC</td>
-                        <td>3/27/26 - 3/28/26</td>
-                        <td>David Lewis</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>TBD MI</td>
-                        <td>TBD</td>
-                        <td>Melanie Farkas</td>
-                        <td>Local Mid-Level</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Dallas TX</td>
-                        <td>TBD</td>
-                        <td>Brooke Yosek</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Cincinnati OH</td>
-                        <td>TBD</td>
-                        <td>Jason McKinney</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Albuquerque NM</td>
-                        <td>4/11/26</td>
-                        <td>Everett Altman & Rich Lowery</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>SC Training (Pending)</td>
-                        <td>TBD</td>
-                        <td>4/19/26 - 4/24/26</td>
-                        <td>Melanie Farkas & Jason McKinney</td>
-                        <td>Pending SC Training (Michigan / Illinois / Ohio Region?)</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>Olney IL</td>
-                        <td>TBD</td>
-                        <td>Melanie Farkas</td>
-                        <td>5th Touch Local Mid-Level</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Newark NJ</td>
-                        <td>TBD</td>
-                        <td>Rich Lowery</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Pittsburgh PA</td>
-                        <td>5/2/26</td>
-                        <td>Rich Lowery</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive (pt. 1 of 2)</td>
-                        <td>Baton Rouge LA</td>
-                        <td>5/8/26 - 5/9/26</td>
-                        <td>Ryan Spinks</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Nashville TN</td>
-                        <td>5/9/26</td>
-                        <td>David Kaufmann</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive (pt. 2 of 2)</td>
-                        <td>Baton Rouge LA</td>
-                        <td>5/23/26 - 5/24/26</td>
-                        <td>Ryan Spinks</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Stephenville TX</td>
-                        <td>6/13/26</td>
-                        <td>Joseph Hansen</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Battle Creek MI</td>
-                        <td>6/13/26</td>
-                        <td>Melanie Farkas</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>TBD MA</td>
-                        <td>6/20/26</td>
-                        <td>Rich Lowery</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Albuquerque NM</td>
-                        <td>6/27/26</td>
-                        <td>Everett Altman & Rich Lowery</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Dallas TX</td>
-                        <td>TBD</td>
-                        <td>Brooke Yosek</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Cincinnati OH</td>
-                        <td>TBD</td>
-                        <td>Jason McKinney</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 2</td>
-                        <td>Hanahan SC</td>
-                        <td>7/10/26 - 7/11/26</td>
-                        <td>David Lewis</td>
-                        <td>2nd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Pittsburgh PA</td>
-                        <td>7/11/26</td>
-                        <td>Rich Lowery</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Nashville TN</td>
-                        <td>7/22/26 - 7/25/26</td>
-                        <td>David Kaufmann</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>Mt. Pleasant SC</td>
-                        <td>TBD</td>
-                        <td>David Lewis</td>
-                        <td>Local Mid-Level</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Newark NJ</td>
-                        <td>TBD</td>
-                        <td>Rich Lowery</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Stephenville TX</td>
-                        <td>8/29/26</td>
-                        <td>Joseph Hansen</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>Baton Rouge LA</td>
-                        <td>9/5/26 - 9/7/26</td>
-                        <td>Ryan Spinks</td>
-                        <td>5th Touch Local Mid-Level</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Albuquerque NM</td>
-                        <td>9/19/26</td>
-                        <td>Everett Altman & Rich Lowery</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>Battle Creek MI</td>
-                        <td>9/25/26 - 9/27/26</td>
-                        <td>Melanie Farkas</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4 Fields Intensive</td>
-                        <td>TBD MA</td>
-                        <td>9/26/26</td>
-                        <td>Rich Lowery</td>
-                        <td>4th Touch 4 Fields Intensive</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 1</td>
-                        <td>Australia / New Zealand</td>
-                        <td>TBD</td>
-                        <td>Caleb Lyon</td>
-                        <td>1st Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>GCT 3</td>
-                        <td>Dallas TX</td>
-                        <td>TBD</td>
-                        <td>Brooke Yosek</td>
-                        <td>3rd Touch Gospel Conversations Training</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Mid-Level</td>
-                        <td>MI / IL Region</td>
-                        <td>TBD</td>
-                        <td>Melanie Farkas</td>
-                        <td>Regional Mid-Level</td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <p style="margin-top: 20px; font-style: italic;">Note: Sign-up links will be added as they become available. For training descriptions, refer to the full Google Sheet: <a href="https://docs.google.com/spreadsheets/d/1gmRtkHsK6WGQp1zSZqQ6xSraWIIAAiX35X_Ft8HxQ1Q/edit?gid=0#gid=0" target="_blank">View Full Sheet</a></p>
-        </section>
-
-        <section id="materials">
-            <h2>Training Materials</h2>
-            <p>Access our collection of training resources below. These materials are designed to be practical and easy to use.</p>
-            <ul class="materials">
-                <li><a href="YOUR_MATERIAL_URL1">Training Material 1 - Introduction to Church Planting</a></li>
-                <li><a href="YOUR_MATERIAL_URL2">Training Material 2 - Advanced Strategies</a></li>
-                <!-- Add more as needed -->
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>If you're interested in our training or have questions, please reach out using the form below.</p>
-            <form action="https://formspree.io/f/YOUR_ACTUAL_FORM_ID" method="POST" aria-label="Contact form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required aria-label="Your name">
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required aria-label="Your email">
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required aria-label="Your message"></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 American Church Planting Training. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+                        <td>M
