Update image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             text-decoration: underline;
         }
         .hero {
-            background-image: url('https://github.com/counciloftroas/5-in-12/blob/main/roger-starnes-sr-3qffsgDHFIw-unsplash.jpg?raw=true');
+            background-image: url('https://github.com/counciloftroas/counciloftroas.github.io/blob/main/roger-starnes-sr-3qffsgDHFIw-unsplash.jpg?raw=true');
             background-size: cover;
             background-position: center;
             color: #ffffff;
@@ -232,7 +232,7 @@
 </head>
 <body>
     <header>
-        <img src="https://github.com/counciloftroas/5-in-12/blob/main/Asset%201.png?raw=true" alt="American Church Planting Training Logo">
+        <img src="https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png" alt="American Church Planting Training Logo">
         <h1>American Church Planting Training</h1>
         <p>5 Trainings in 12 Months</p>
     </header>
