Change h2 text color to white

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
         h2 {
             font-family: 'Lora', serif;
-            color: #1c2533;
+            color: #ffffff;
             font-size: 2em;
             margin-bottom: 20px;
         }
