Update navigation links and contact form action
Updated links and text in the navigation and hero sections. Changed form action for contact.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <nav>
         <ul>
             <li><a href="#calendar">Training Calendar</a></li>
-            <li><a href="#materials">Training Materials</a></li>
+            <li><a href="materials.html">Training Materials</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -248,7 +248,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>American Church Planting</h2>
-            <p>Explore our training calendar and access high-quality resources to enhance your skills.</p>
+            <p>Explore our training calendar and access all our training materials for free.</p>
             <a href="#calendar" class="cta">Get Training</a>
         </div>
     </section>
@@ -256,7 +256,7 @@
     <main>
         <section id="calendar" class="calendar-container">
             <h2>Training Calendar</h2>
-            <p>View our upcoming training events below. This calendar is sourced from Google Sheets and can be updated easily.</p>
+            <p>View our upcoming training events below.</p>
             <table>
                 <thead>
                     <tr>
@@ -687,7 +687,7 @@
                     </tr>
                 </tbody>
             </table>
-            <p style="margin-top: 20px; font-style: italic;">Note: Sign-up links will be added as they become available. For training descriptions, refer to the full Google Sheet: <a href="https://docs.google.com/spreadsheets/d/1gmRtkHsK6WGQp1zSZqQ6xSraWIIAAiX35X_Ft8HxQ1Q/edit?gid=0#gid=0" target="_blank">View Full Sheet</a></p>
+            <p style="margin-top: 20px; font-style: italic;">import-ready calendar coming soon.</a></p>
         </section>
 
         <section id="materials">
@@ -703,7 +703,7 @@
         <section id="contact">
             <h2>Contact Us</h2>
             <p>If you're interested in our training or have questions, please reach out using the form below.</p>
-            <form action="https://formspree.io/f/YOUR_ACTUAL_FORM_ID" method="POST" aria-label="Contact form">
+            <form action="https://formspree.io/f/mblzeodk" method="POST" aria-label="Contact form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required aria-label="Your name">
 
