Update contact paragraph for clarity

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you're interested in our training or have questions, please reach out using the form below.</p>
+            <p>If you're interested in scheduling a training in your area or have questions, please reach out using the form below.</p>
             <form action="https://formspree.io/f/mblzeodk" method="POST" aria-label="Contact form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required aria-label="Your name">
