Change header text and update h2 color

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
         h2 {
             font-family: 'Lora', serif;
-            color: #ffffff;
+            color: #1c2533;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -247,7 +247,7 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h2>American Church Planting</h2>
+            <h1>Christ is King from Sea to Shining Sea</h1>
             <p>Explore our training calendar and access all our training materials for free.</p>
             <a href="#calendar" class="cta">Get Training</a>
         </div>
