--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             margin: 0;
-            padding-top: 5px; /* Account for sticky header */
+            padding-top: 120px; /* Adjusted for initial header height */
             background-color: #ffffff;
             color: #4b4b4b;
             line-height: 1.6;
@@ -29,19 +29,39 @@
             top: 0;
             z-index: 1000;
             border-bottom: 1px solid #b7a57a;
+            transition: all 0.3s ease; /* Smooth transition for shrinking */
+        }
+        header.shrunk {
+            padding: 10px; /* Reduced padding when shrunk */
         }
         header img {
             max-width: 150px;
             margin-bottom: 10px;
+            transition: max-width 0.3s ease; /* Smooth logo size transition */
+        }
+        header.shrunk img {
+            max-width: 100px; /* Smaller logo when header is shrunk */
         }
         header h1 {
             font-family: 'Lora', serif;
             margin: 0;
             font-size: 2.5em;
+            transition: opacity 0.3s ease; /* Fade out title */
+        }
+        header.shrunk h1 {
+            opacity: 0;
+            height: 0;
+            overflow: hidden;
         }
         header p {
             margin: 5px 0;
             font-size: 1.1em;
+            transition: opacity 0.3s ease; /* Fade out subtitle */
+        }
+        header.shrunk p {
+            opacity: 0;
+            height: 0;
+            overflow: hidden;
         }
         nav {
             background-color: #b7a57a;
@@ -227,11 +247,14 @@
             th, td {
                 padding: 4px;
             }
+            header.shrunk img {
+                max-width: 80px; /* Smaller logo on mobile when shrunk */
+            }
         }
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <img src="https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png" alt="American Church Planting Training Logo">
         <h1>American Church Planting Training</h1>
         <p>5 Trainings in 12 Months</p>
@@ -687,7 +710,7 @@
                     </tr>
                 </tbody>
             </table>
-            <p style="margin-top: 20px; font-style: italic;">import-ready calendar coming soon.</a></p>
+            <p style="margin-top: 20px; font-style: italic;">import-ready calendar coming soon.</p>
         </section>
 
         <section id="materials">
@@ -721,5 +744,16 @@
     <footer>
         <p>&copy; 2025 American Church Planting Training. All rights reserved.</p>
     </footer>
+
+    <script>
+        window.addEventListener('scroll', function() {
+            const header = document.getElementById('header');
+            if (window.scrollY > 50) {
+                header.classList.add('shrunk');
+            } else {
+                header.classList.remove('shrunk');
+            }
+        });
+    </script>
 </body>
 </html>
