--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             margin: 0;
-            padding-top: 0px; /* Adjusted for initial header height */
+            padding-top: 120px; /* Adjusted for initial header height */
             background-color: #ffffff;
             color: #4b4b4b;
             line-height: 1.6;
@@ -148,6 +148,20 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
+        h3 {
+            font-family: 'Lora', serif;
+            color: #1c2533;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .training-plan img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto 20px;
+            border: 1px solid #b7a57a;
+            border-radius: 5px;
+        }
         .calendar-container {
             overflow-x: auto;
         }
@@ -250,6 +264,9 @@
             header.shrunk img {
                 max-width: 80px; /* Smaller logo on mobile when shrunk */
             }
+            .training-plan img {
+                max-width: 100%;
+            }
         }
     </style>
 </head>
@@ -277,6 +294,17 @@
     </section>
 
     <main>
+        <section id="training-plan" class="training-plan">
+            <h2>Our Training Plan</h2>
+            <img src="YOUR_TRAINING_PLAN_IMAGE_URL" alt="American Church Planting Training Plan">
+            <h3>Core Training Principles</h3>
+            <p>Our training is built on foundational principles to equip you for effective church planting. [Add your text here]</p>
+            <h3>Practical Application</h3>
+            <p>Learn hands-on strategies to apply in real-world ministry settings. [Add your text here]</p>
+            <h3>Community Engagement</h3>
+            <p>Discover how to connect with communities to share the Gospel effectively. [Add your text here]</p>
+        </section>
+
         <section id="calendar" class="calendar-container">
             <h2>Training Calendar</h2>
             <p>View our upcoming training events below.</p>
