Update training plan image source in index.html

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <main>
         <section id="training-plan" class="training-plan">
             <h2>Our Training Plan</h2>
-            <img src="YOUR_TRAINING_PLAN_IMAGE_URL" alt="American Church Planting Training Plan">
+            <img src="ACPT Plan.png" alt="American Church Planting Training Plan">
             <h3>Core Training Principles</h3>
             <p>Our training is built on foundational principles to equip you for effective church planting. [Add your text here]</p>
             <h3>Practical Application</h3>
