Revise training section and remove placeholder text
Updated training section with specific training details.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             margin: 0;
-            padding-top: 120px; /* Adjusted for initial header height */
+            padding-top: 0px; /* Adjusted for initial header height */
             background-color: #ffffff;
             color: #4b4b4b;
             line-height: 1.6;
@@ -297,12 +297,11 @@
         <section id="training-plan" class="training-plan">
             <h2>Our Training Plan</h2>
             <img src="ACPT Plan.png" alt="American Church Planting Training Plan">
-            <h3>Core Training Principles</h3>
-            <p>Our training is built on foundational principles to equip you for effective church planting. [Add your text here]</p>
-            <h3>Practical Application</h3>
-            <p>Learn hands-on strategies to apply in real-world ministry settings. [Add your text here]</p>
-            <h3>Community Engagement</h3>
-            <p>Discover how to connect with communities to share the Gospel effectively. [Add your text here]</p>
+            <h3>Trainings</h3>
+            <p>Gospel Conversations Training - equips you with basic tools and practices to proclaim Christ and make disciples.</p>
+            <p>4 Fields Intensive Training - develop biblical foundaiton for church planting and disciple-making.</p>
+            <p>Midlevel Training - strategically problem solve and pray for church health and multiplication.</p>
+            <a href="materials.html" class="cta">Training Details</a>
         </section>
 
         <section id="calendar" class="calendar-container">
