--- a/materials.html
+++ b/materials.html
@@ -165,8 +165,8 @@
 
     <main>
         <section id="materials">
-            <h2>Training Materials</h2>
-            <p>Access our collection of training resources below. These materials are designed to be practical and easy to use for church planting, including Gospel Conversations Training (GCT) and 4 Fields Intensive guides.</p>
+            <h2>Training Overview</h2>
+            <p>Access our collection of training resources below. These materials represent phases of church planting.</p>
             <table>
                 <thead>
                     <tr>
@@ -177,24 +177,24 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Introduction to Church Planting</td>
+                        <td>Four Fields of Kingdom Growth (Phase 1)</td>
                         <td>PDF</td>
-                        <td><a href="YOUR_MATERIAL_URL1">Download</a></td>
+                        <td><a href="https://20ba5426-3a8d-4178-b213-44503cb74ed2.filesusr.com/ugd/3fe2a5_680eaf0f639548729d669a8c71953b65.pdf">Download</a></td>
                     </tr>
                     <tr>
-                        <td>Advanced Church Planting Strategies</td>
+                        <td>Foundations (Phase 2)</td>
                         <td>PDF</td>
-                        <td><a href="YOUR_MATERIAL_URL2">Download</a></td>
+                        <td><a href="https://drive.google.com/file/d/0B65FqZkueQVfTG1yaFJuaGZoSkU/view?usp=sharing&resourcekey=0-IOqbzIq9YeGYIM1vC6gXvA">Download</a></td>
                     </tr>
                     <tr>
-                        <td>GCT 1st Touch Guide</td>
+                        <td>Confessions (Phase 3)</td>
                         <td>PDF</td>
-                        <td><a href="YOUR_MATERIAL_URL3">Download</a></td>
+                        <td><a href="https://drive.google.com/file/d/16YPTxc00n9Kq1RGL9Bups8Xl5BPhyG_I/view?usp=sharing">Download</a></td>
                     </tr>
                     <tr>
-                        <td>4 Fields Intensive Overview</td>
-                        <td>Video</td>
-                        <td><a href="YOUR_MATERIAL_URL4">Watch</a></td>
+                        <td>Hosting A Training Rollout</td>
+                        <td>PDF</td>
+                        <td><a href="https://docs.google.com/document/d/11UxwIkGMwqZjRQWMjpBnKzSUeKCMKIKWB_cYLEx9mq0/edit?usp=sharing">Watch</a></td>
                     </tr>
                     <!-- Add more rows as needed -->
                 </tbody>
