Change download links to view links in materials.html

--- a/materials.html
+++ b/materials.html
@@ -179,22 +179,22 @@
                     <tr>
                         <td>Four Fields of Kingdom Growth (Phase 1)</td>
                         <td>PDF</td>
-                        <td><a href="https://20ba5426-3a8d-4178-b213-44503cb74ed2.filesusr.com/ugd/3fe2a5_680eaf0f639548729d669a8c71953b65.pdf">Download</a></td>
+                        <td><a href="https://20ba5426-3a8d-4178-b213-44503cb74ed2.filesusr.com/ugd/3fe2a5_680eaf0f639548729d669a8c71953b65.pdf">View</a></td>
                     </tr>
                     <tr>
                         <td>Foundations (Phase 2)</td>
                         <td>PDF</td>
-                        <td><a href="https://drive.google.com/file/d/0B65FqZkueQVfTG1yaFJuaGZoSkU/view?usp=sharing&resourcekey=0-IOqbzIq9YeGYIM1vC6gXvA">Download</a></td>
+                        <td><a href="https://drive.google.com/file/d/0B65FqZkueQVfTG1yaFJuaGZoSkU/view?usp=sharing&resourcekey=0-IOqbzIq9YeGYIM1vC6gXvA">View</a></td>
                     </tr>
                     <tr>
                         <td>Confessions (Phase 3)</td>
                         <td>PDF</td>
-                        <td><a href="https://drive.google.com/file/d/16YPTxc00n9Kq1RGL9Bups8Xl5BPhyG_I/view?usp=sharing">Download</a></td>
+                        <td><a href="https://drive.google.com/file/d/16YPTxc00n9Kq1RGL9Bups8Xl5BPhyG_I/view?usp=sharing">View</a></td>
                     </tr>
                     <tr>
                         <td>Hosting A Training Rollout</td>
                         <td>PDF</td>
-                        <td><a href="https://docs.google.com/document/d/11UxwIkGMwqZjRQWMjpBnKzSUeKCMKIKWB_cYLEx9mq0/edit?usp=sharing">Watch</a></td>
+                        <td><a href="https://docs.google.com/document/d/11UxwIkGMwqZjRQWMjpBnKzSUeKCMKIKWB_cYLEx9mq0/edit?usp=sharing">View</a></td>
                     </tr>
                     <!-- Add more rows as needed -->
                 </tbody>
