--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             scroll-behavior: smooth;
         }
         header {
-            background-color: #1c2533;
+            background-color: #1c2533; /* Fallback color */
+            background-image: url('tyler-coleman-TFQBG_gFROc-unsplash-2.jpg');
+            background-repeat: repeat; /* Ensures the pattern tiles */
+            background-size: auto; /* Adjust size if needed */
             color: #ffffff;
             text-align: center;
             position: sticky;
