Change header background size to 250px by 250px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             background-color: #1c2533; /* Fallback color */
             background-image: url('tyler-coleman-TFQBG_gFROc-unsplash-2.jpg');
             background-repeat: repeat; /* Ensures the pattern tiles */
-            background-size: auto; /* Adjust size if needed */
+            background-size: 250px 250px; /* Adjust size if needed */
             color: #ffffff;
             text-align: center;
             position: sticky;
